Fix the status jumping on Chrome on Mac. Sadly, now there is a 1-2 pixel shift between button and menu selector on Linux Firefox.

--- a/view/css/chris.feed.css
+++ b/view/css/chris.feed.css
@@ -311,5 +311,5 @@
 }
 
 .feed_btn {
-	line-height: 15px;
+	line-height: 13px;
 }
